# inference-budget-controller

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  Dockerfile.fox  INFERENCE_PROXY.md  Makefile.fox  README.md  RUST_REWRITE.md  go.mod  go.sum
.beads/: issues.jsonl
.github/: kind-config.yaml
.github/workflows/: ci.yml  fox-ci.yml  release.yml
api/v1alpha1/: doc.go  groupversion_info.go  inferencebackend_types.go  inferencemodel_types.go  shared_types.go  zz_generated.deepcopy.go
cmd/: main.go
config/backends/: llamacpp-cpu.yaml  llamacpp-rocm.yaml  llamacpp-vulkan-moe.yaml  llamacpp-vulkan.yaml  vllm.yaml
config/crd/: kustomization.yaml
config/default/: kustomization.yaml
config/fox/: daemonset.yaml  kustomization.yaml
config/manager/: httproute.yaml  kustomization.yaml  manager.yaml  service.yaml
config/rbac/: role.yaml  role_binding.yaml  service_account.yaml
docs/: admission-control.md  architecture.md  crd-reference.md  fox-engine-crate-design.md  getting-started.md  observability.md
docs/examples/: basic-model.yaml  multi-node.yaml  prometheus.yaml
hack/: boilerplate.go.txt  migrate-to-ondemand.sh
internal/budget/: tracker.go  tracker_test.go
internal/controller/: inferencemodel_controller.go
internal/download/: buffer_pool.go  cache.go  cache_test.go  chunked.go  chunked_test.go  detector.go  file_ops.go  file_ops_test.go  manager.go  multi_file.go  progress.go  resolver.go  (+4 more)
k8s-crd/: Cargo.toml
k8s-crd/src/: inference_backend.rs  inference_model.rs  lib.rs  quantity.rs  scheme.rs  shared.rs
(+28 files in other folders)
